# AGI_mindloop

./: .gitignore  AGENTS.md  Outline_mindloop.md  core_loop.py  core_loop.py~  lua~  pyproject.toml
agi_mindloop/: AGENTS.md  __init__.py  config.py  core_loop.py  core_loop.py~
agi_mindloop/action/: AGENTS.md  __init__.py  debate.py  debate.py~  decider.py  decider.py~  experimenter.py
agi_mindloop/cognition/: AGENTS.md  __init__.py  explainer.py~  planner.py  planner.py~  self_critic.py
agi_mindloop/config/: config.yaml
agi_mindloop/debate/: AGENTS.md  __init__.py  json_schema.py
agi_mindloop/io_mod/: AGENTS.md  file_writer.py  interface.py  interface.py~  telemetry.py
agi_mindloop/llm/: AGENTS.md  __init__.py  __init__.py~  engine.py  engine.py~  util.py
agi_mindloop/memory/: AGENTS.md  __init__.py  __init__.py~  debate_gate.py  embeddings.py  json_schema.py  meta_store.py  recall.py  vector_store.py
agi_mindloop/memory_loop/: AGENTS.md  __init__.py  faiss_indexer.py  memory.py  memory_debate.py  memory_logger.py
agi_mindloop/personas/: AGENTS.md  __init__.py~  analytical.md~  coder.md~  focused.md  inpulsive.md~  meticulous.md  persona.py~  risk_averse.md~
agi_mindloop/prompts/: AGENTS.md  __init__.py  __init__.py~  critic.md~  curate.md  evaluate.md  explainer.md~  judge.md  planner.md
agi_mindloop/training/: AGENTS.md  (+1 more)
config/: AGENTS.md  config.yaml
data/: AGENTS.md  meta.sqlite3
tests/: AGENTS.md  test_action_init.py  test_config_defaults.py  test_core_loop_sandbox.py  test_llm_import.py  test_meta_store.py  test_prompt_loader.py
(+3 files in other folders)
